<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AlertesActivity">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:visibility="gone"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ma.snrt.news.ui.TextViewExtraBold
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/configuration"
                android:textColor="?attr/primaryTextColor"
                android:textSize="@dimen/titles_size"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                >

                <ma.snrt.news.ui.TextViewExtraBold
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reception_alerte"
                    android:textColor="?attr/secondaryTextColor"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    />

                <com.suke.widget.SwitchButton
                    android:id="@+id/config_switch"
                    android:layout_width="40dp"
                    android:layout_height="24dp"
                    app:sb_checked_color="@color/colorPrimary"
                    app:sb_uncheck_color="@color/switch_color_des"
                    app:sb_background="?attr/backgroundColor2"
                    app:sb_show_indicator="false"
                    />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?attr/dividerColor"
                android:layout_marginTop="20dp"
                />

            <ma.snrt.news.ui.TextViewRegular
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alertes_perso_text"
                android:textColor="?attr/secondaryTextColor"
                android:textSize="14sp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                />

            <ma.snrt.news.ui.TextViewExtraBold
                android:id="@+id/select_all_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_all"
                android:textColor="?attr/primaryTextColor"
                android:textSize="12sp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_gravity="end"
                android:onClick="onClick"
                android:clickable="true"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?attr/dividerColor"
                android:layout_marginTop="20dp"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?attr/dividerColor"
                android:layout_marginTop="20dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                >

                <ma.snrt.news.ui.TextViewExtraBold
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/story"
                    android:textColor="?attr/secondaryTextColor"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    />

                <com.suke.widget.SwitchButton
                    android:id="@+id/story_switch"
                    android:layout_width="40dp"
                    android:layout_height="24dp"
                    app:sb_checked_color="@color/colorPrimary"
                    app:sb_background="@color/divider_primary"
                    app:sb_show_indicator="false"
                    />

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <ma.snrt.news.ui.TextViewRegular
        android:id="@+id/empty_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/empty_list_text"
        android:textColor="?attr/secondaryTextColor"
        android:textSize="@dimen/titles_size"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:gravity="center"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/progress_bar"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/toolbarBg"
        android:elevation="2dp"
        >

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="@dimen/detail_icon_size"
            android:layout_height="wrap_content"
            android:src="?attr/iconBack"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"
            android:layout_centerVertical="true"
            android:onClick="onClick"
            android:adjustViewBounds="true"
            />

        <ma.snrt.news.ui.TextViewBold
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="@dimen/page_title"
            android:textColor="?attr/primaryTextColor"
            android:textAllCaps="true"
            android:text="@string/notifications"
            />

    </RelativeLayout>

</RelativeLayout>