<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    tools:context=".fragment.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <ImageView
            android:layout_width="@dimen/menu_logo_width"
            android:layout_height="wrap_content"
            android:src="?attr/menuLogo"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/menu_logo_margin"
            android:adjustViewBounds="true"
            />

        <LinearLayout
            android:id="@+id/favoris_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="@dimen/menu_logo_margin"
            android:layout_marginEnd="30dp"
            android:visibility="gone"
            >

            <ma.snrt.news.ui.TextViewBlack
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/favoris"
                android:textAllCaps="true"
                android:textColor="?attr/primaryTextColor"
                android:textSize="@dimen/page_title"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_gravity="end|center_vertical"
                android:src="@drawable/arrow_settings" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:background="?attr/dividerColor"
            android:visibility="gone"
            />

        <!-- General category -->

        <ma.snrt.news.ui.TextViewBlack
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/general"
            android:textColor="?attr/primaryTextColor"
            android:textSize="@dimen/menu_category_size"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="20dp"
            >

            <ma.snrt.news.ui.TextViewBlack
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/langues"
                android:textColor="?attr/secondaryTextColor"
                android:textSize="@dimen/menu_item_size"
                android:textStyle="bold"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/settings_layout_bg"
                >

                <ma.snrt.news.ui.TextViewBlack
                    android:id="@+id/lang_fr_btn"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginStart="8dp"
                    android:background="@drawable/oval_red"
                    android:clickable="true"
                    android:gravity="center"
                    android:text="@string/fr"
                    android:textColor="#fff"
                    android:textSize="@dimen/big_date_size"
                    android:textStyle="bold" />

                <ma.snrt.news.ui.TextViewBlack
                    android:id="@+id/lang_ar_btn"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginEnd="8dp"
                    android:clickable="true"
                    android:gravity="center"
                    android:text="@string/ar"
                    android:textColor="?attr/secondaryTextColor"
                    android:textSize="@dimen/big_date_size"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?attr/dividerColor"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="20dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="20dp"
            >

            <ma.snrt.news.ui.TextViewBlack
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dark_mode"
                android:textColor="?attr/secondaryTextColor"
                android:textSize="@dimen/menu_item_size"
                android:textStyle="bold"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/settings_layout_bg"
                >

                <ImageView
                    android:id="@+id/normal_mode_btn"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginStart="8dp"
                    android:background="@drawable/oval_red"
                    android:padding="8dp"
                    android:src="@drawable/soleil_active" />

                <ImageView
                    android:id="@+id/dark_mode_btn"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginEnd="8dp"
                    android:padding="8dp"
                    android:src="@drawable/lune_inactive" />

            </LinearLayout>

        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?attr/dividerColor"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="20dp"
            />

        <LinearLayout
            android:id="@+id/note_layout"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="20dp"
            >

            <ma.snrt.news.ui.TextViewBlack
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/noter_app"
                android:textColor="?attr/secondaryTextColor"
                android:textSize="@dimen/menu_item_size"
                android:textStyle="bold"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                />

            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_gravity="center_vertical|end"
                android:src="@drawable/arrow_settings"
                android:visibility="gone"
                />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?attr/dividerColor"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="20dp"
            />

        <LinearLayout
            android:id="@+id/alertes_layout"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="20dp"
            >

            <ma.snrt.news.ui.TextViewBlack
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notifications"
                android:textColor="?attr/secondaryTextColor"
                android:textSize="@dimen/menu_item_size"
                android:textStyle="bold"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                />

            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_gravity="center_vertical|end"
                android:src="@drawable/arrow_settings" />

        </LinearLayout>

        <!-- Conditions and privacy category -->

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?attr/dividerColor"
            android:layout_marginTop="10dp"
            />

        <!-- Snrt News category -->

        <RelativeLayout
            android:id="@+id/apropos_layout"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            >

            <ma.snrt.news.ui.TextViewBlack
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a_propos"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/menu_category_size"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:layout_alignParentStart="true"
                android:layout_toEndOf="@+id/about_arrow"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                />

            <ImageView
                android:id="@+id/about_arrow"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/arrow_settings" />

        </RelativeLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/close_btn"
        android:layout_width="@dimen/standard_icon_size"
        android:layout_height="@dimen/standard_icon_size"
        android:src="@drawable/close_menu"
        android:layout_margin="@dimen/detail_icon_margin"
        android:layout_alignParentEnd="true"
        android:padding="2dp"
        />

</RelativeLayout>